--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -1,1 +1,28 @@
-<p>contact-list works!</p>
+<h2 class="mb-5">Mis Contactos</h2>
+
+<div class="text-end">
+  <button class="btn btn-primary" routerLink="/new">
+    Nuevo contacto
+  </button>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>NOMBRE</th>
+      <th>EMAIL</th>
+      <th>FECHA CREACION</th>
+      <th>ACCIONES</th>
+    </tr>
+  </thead>
+  <tbody>
+    @for (contact of contacts; track contact.id) {
+      <tr>
+        <td>{{contact.id}}</td>
+        <td>{{contact.name}}</td>
+        <td>{{contact.email}}</td>
+        <td>{{contact.createdAt | date:'dd/MM/yyyy hh:mm a'}}</td>
+      </tr>
+    }
+  </tbody>
+</table>
