--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -22,6 +22,14 @@
         <td>{{contact.name}}</td>
         <td>{{contact.email}}</td>
         <td>{{contact.createdAt | date:'dd/MM/yyyy hh:mm a'}}</td>
+        <td class="text-end">
+          <button class="btn btn-primary" routerLink="/{{contact.id}}/edit">
+            Editar
+          </button>
+          <button class="btn btn-danger">
+            Eliminar
+          </button>
+        </td>
       </tr>
     }
   </tbody>
