--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -3,7 +3,7 @@
 </h2>
 <div class="row row-cols-3 justify-content-center">
   @if (form) {
-    <form [formGroup]="form" (submit)="create()">
+    <form [formGroup]="form" (submit)="save()">
 
       <div>
         <label for="name">Nombre</label>
