--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -26,7 +26,7 @@
           <button class="btn btn-primary" routerLink="/{{contact.id}}/edit">
             Editar
           </button>
-          <button class="btn btn-danger">
+          <button class="btn btn-danger" (click)="deleteContact(contact)">
             Eliminar
           </button>
         </td>
