--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -3,42 +3,64 @@
 </h2>
 <div class="row row-cols-3 justify-content-center">
   @if (form) {
-    <form [formGroup]="form" (submit)="save()">
+    <div>
+      @if (errors.length) {
+        <div class="alert alert-danger">
+          <p>Ha ocurrido un error!</p>
+          <ul>
+            @for (error of errors; track error) {
+              <li>{{error}}</li>
+            }
+          </ul>
+        </div>
+      }
 
-      <div>
-        <label for="name">Nombre</label>
-        <input
-          id="name"
-          type="text"
-          placeholder="Nombre"
-          class="form-control"
-          formControlName="name"
-        >
-      </div>
-      <div>
-        <label for="email">Email</label>
-        <input
-          id="email"
-          type="email"
-          placeholder="Email"
-          class="form-control"
-          formControlName="email"
-        >
-      </div>
+      <form [formGroup]="form" (submit)="save()">
 
-      <div class="text-end">
-        <button
-          type="button"
-          class="btn btn-danger ms-2"
-          routerLink="/"
-        >
-          Cancelar
-        </button>
-        <button class="btn btn-primary ms-2">
-          {{ contact ? 'Actualizar' : 'Crear' }} contacto
-        </button>
-      </div>
+        <div>
+          <label for="name">Nombre</label>
+          <input
+            id="name"
+            type="text"
+            placeholder="Nombre"
+            class="form-control"
+            formControlName="name"
+          >
+          @if (form.get('name')?.hasError('required') && form.get('name')?.touched) {
+            <p class="invalid-feedback d-block" >El nombre es obligatorio</p>
+          }
+        </div>
+        <div>
+          <label for="email">Email</label>
+          <input
+            id="email"
+            type="email"
+            placeholder="Email"
+            class="form-control"
+            formControlName="email"
+          >
+          @if (form.get('email')?.hasError('required') && form.get('email')?.touched) {
+            <p class="invalid-feedback d-block" >El email es obligatorio</p>
+          }
+          @if (form.get('email')?.hasError('email') && form.get('email')?.touched) {
+            <p class="invalid-feedback d-block" >El email es invalido</p>
+          }
+        </div>
 
-    </form>
+        <div class="text-end">
+          <button
+            type="button"
+            class="btn btn-danger ms-2"
+            routerLink="/"
+          >
+            Cancelar
+          </button>
+          <button class="btn btn-primary ms-2">
+            {{ contact ? 'Actualizar' : 'Crear' }} contacto
+          </button>
+        </div>
+
+      </form>
+    </div>
   }
 </div>
